Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12045

Assertion error in ntoskrnl/io/iomgr/file.c after exception in Apache web server

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.11
    • NTCore
    • None
    • Virtual Box 5.1.2 r108956, React OS r72798, Denwer3_base_2013-06-02

    Description

      I try run Apache 2.2.22 as part of Denwer It throws an unknown exception. Then React OS stops with assertion error:

      (ntoskrnl/io/iomgr/file.c:1949) We need to unlock this file!
       
      *** Assertion failed: FALSE
      ***   Source File: /srv/buildbot/Build_GCCLin_x86/build/ntoskrnl/io/iomgr/file.c, line 1950
       
      Break repeatedly, break Once, Ignore, terminate Process or terminate Thread (boipt)?  
      kdb:> b
      Command 'b' is unknown.
      kdb:> bt
      Eip:
      <NTOSKRNL.EXE:13c18f (:0 (DbgBreakPoint))>
      Frames:
      <NTOSKRNL.EXE:5d803 (ntoskrnl/io/iomgr/file.c:1950 (IopCloseFile))>
      <NTOSKRNL.EXE:e7076 (ntoskrnl/ob/obhandle.c:634 (ObpDecrementHandleCount))>
      <NTOSKRNL.EXE:e72c2 (ntoskrnl/ob/obhandle.c:761 (ObpCloseHandleTableEntry))>
      <NTOSKRNL.EXE:e7313 (ntoskrnl/ob/obhandle.c:1927 (ObpCloseHandleCallback))>
      <NTOSKRNL.EXE:30ca3 (ntoskrnl/ex/handle.c:1211 (ExSweepHandleTable))>
      <NTOSKRNL.EXE:e8ff1 (ntoskrnl/ob/obhandle.c:2182 (ObKillProcess))>
      <NTOSKRNL.EXE:fc00e (ntoskrnl/ps/kill.c:837 (PspExitThread))>
      <NTOSKRNL.EXE:fc27c (ntoskrnl/ps/kill.c:1017 (PspTerminateThreadByPointer))>
      <NTOSKRNL.EXE:fcb81 (ntoskrnl/ps/kill.c:1249 (NtTerminateProcess))>
      <NTOSKRNL.EXE:1212f4 (ntoskrnl/include/internal/i386/ke.h:706 (KiSystemServiceHandler))>
      <NTOSKRNL.EXE:3da9 (:0 (KiFastCallEntry))>
      <ntdll.dll:c81d>
      <MSVCR90.dll:6c8c9>
      <MSVCR90.dll:6ae59>
      <libapr-1.dll:1e66>
      <ccccc378>
      Couldn't access memory at 0x5B73A8BC!

      Attachments

        Issue Links

          Activity

            People

              Heis Spiter Pierre Schweitzer
              A_S A_S
              Votes:
              2 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: