[NTOSKRNL] Reference the file object before issuing the unlock all IRP

This fixes the last kmode assert triggered by httpd on ReactOS.

CORE-12045